[package]
name = "combu"
version = "0.1.6-alpha.0"
authors = ["suquiya <22910980+suquiya@users.noreply.github.com>"]
description = "Combu is yet another mini cli framework. (WIP, implementing)"
edition = "2018"
license="MIT"
repository="https://github.com/suquiya/combu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
