[package]
name = "combu"
version = "1.3.0"
authors = ["suquiya"]
description = "Combu is a yet another mini cli framework."
edition = "2024"
license = "MIT"
# license-file="LICENSE"
documentation = "https://docs.rs/combu/"
homepage = "https://github.com/suquiya/combu"
repository = "https://github.com/suquiya/combu"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["argument", "arg", "cli", "command-line", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vector_serde = ["serde"]

[dependencies]
serde = { version = "1.0.216", optional = true }

[alias]
wt = "make watch"
dev = "wt"
et = "make et"
